--- a/index.html
+++ b/index.html
@@ -1,12 +1,166 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <label for="">dadadadadada</label>
-    <label for="">asdada</label>
-</body>
+<html>
+    <head>
+        <title>65160237</title>
+        <meta charset="utf-8" />
+    </head>
+    <body background="sky.jpg">
+        <center><h1>SE-CAMP&emsp;&nbsp;</h1></center>
+        <p>
+            <br><hr /><br />
+        </p>
+        <center>
+        <table cellspacing="8" cellpadding="8" style=" border:2px DASHED #62A2A2;background-color: #62A2A2" width=470><tbody><tr><td  valign="middle" style="background-color: #7BB0B0"><table border="0" cellspacing="8" cellpadding="8" width=470 style=" background-color: #95BFBF"><tbody><tr><td  style=" border:2px DASHED #B8D3D3;background-color: #B8D3D3">
+        <h1>Workshop #HTML - FORM</h1>
+        <form action="#">
+            
+            <table>
+                <br>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                    <td>ชื่อ</td>
+                    <td><input type="Fname"/></td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr>
+                    <td>สกุล</td>
+                    <td><input type="lname"/></td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr>
+                    <td>วัน/เดือน/ปีเกิด</td>
+                    <td><input type="date" /></td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr>
+                    <td>อายุ</td>
+                    <td>
+                        <input id="radio_a"
+                               type="radio" 
+                               name="same_radio"/>
+                        <label for="radio_a">ชาย</label>
+                        <input id="radio_b"
+                                type="radio" 
+                                name="same_radio" />
+                        <label for="radio_b">หญิง</label>
+                    </td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr>
+                    <td>
+                        รูป
+                    </td>
+                    <td><input type="file"></td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr>
+                    <td>ที่อยู่</td>
+                    <td><textarea rows="4" 
+                    placeholder="กรุณาป้อนข้อมูล"></textarea>
+                    </td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr>
+                    <td>
+                        สีที่ชอบ
+                    </td>
+                    <td>
+                        <select>
+                            <option 
+                            value=""
+                            disabled 
+                            selected>สีที่ชอบ</option>
+                            <option>สีแดง</option>
+                            <option>สีเขียว</option>
+                            <option>สีเหลือง</option>
+                            <option>สีน้ำเงิน</option>
+                            <option>สีฟ้า</option>
+                            <option>สีขาว</option>
+                            <option>สีดำ</option>
+                            <option>สีส้ม</option>
+                            <option>สีม่วง</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr>
+                    <td>แนวเพลงที่ชอบ</td>
+                    <td>
+                        <input id="radio_เพื่อชีวิต"
+                               type="radio" 
+                               name="same_radio"/>
+                        <label for="radio_เพื่อชีวิต">เพื่อชีวิต</label>
+                        <input id="radio_ลูกทุ่ง"
+                                type="radio" 
+                                name="same_radio" />
+                        <label for="radio_b">ลูกทุ่ง</label>
+                        <input id="radio_อื่นๆ"
+                                type="radio" 
+                                name="same_radio" />
+                        <label for="radio_b">อื่นๆ</label>
+                    </td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr>
+                    <td>
+                        <input type="checkbox"
+                              name="my_checkbox">ยินยอมให้เก็บข้อมูล
+                    </td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr>
+                    <td>
+                        <input type="reset" 
+                                value="Reset">
+                    </td>
+                    <td>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="Submit">
+                    </td>
+                </tr>
+            </table>
+            <br><br><br>
+        </form>
+    </body>
+</td></tr></tbody></table></td></tr></tbody></table>
+</center>
 </html>
