--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <label for="radio_a">ชาย</label>
                         <input id="radio_b"
                                 type="radio" 
-                                name="same_radio" />
+                                name="_radio" />
                         <label for="radio_b">หญิง</label>
                     </b>
                     </td>
@@ -129,15 +129,16 @@
                     <b>
                         <input id="radio_เพื่อชีวิต"
                                type="radio" 
-                               name="same_radio"/>
+                               name="song0_radio"/>
                         <label for="radio_เพื่อชีวิต">เพื่อชีวิต</label>
                         <input id="radio_ลูกทุ่ง"
                                 type="radio" 
-                                name="same_radio" />
+                                name="son1_radio" />
                         <label for="radio_b">ลูกทุ่ง</label>
                         <input id="radio_อื่นๆ"
                                 type="radio" 
-                                name="same_radio" />
+                                name="song2_radio" 
+                                openmrs-valuecoded=""/>
                         <label for="radio_b">อื่นๆ</label>
                     </b>
                     </td>
@@ -182,6 +183,7 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="Submit" style="background-color:#f9d4b4; color:#3e2723;">
                     </td>
                 </tr>
+            
             </table>
             <br><br><br>
         </form>
