--- a/Week1/index.html
+++ b/Week1/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" 
     content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mystyle.Css">
     <title>Document</title>
 </head>
-<body>
-    
-</body>
+<head>
+    <style>
+        */
+ h1 {
+    font-family: 'TH SarabunPSK';
+    font-size: 35pt;
+ } 
+        h1
+{text-shadow: 5px 5px 5px #795548;}
+        body {
+            background-image: url('4172161.jpg');
+            background-size: cover; 
+            background-repeat: no-repeat;
+            background-attachment: fixed; 
+        }
+
+        p {
+            background-image: url('4172161.jpg');
+        }
+    </style>
 </html>
 <head>
     <title>65160237</title>
