--- a/Week2/CSS101.html
+++ b/Week2/CSS101.html
@@ -7,17 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is css101.html</h1>
-    <div class="box">This is a box</div>
+    <center><h1>This is CSS101.html</h1></center>
+    <center><div class="box">This is a box</div></center>
     <a href="test">
         Google
     </a>
-    <ul>
+   
         <li>1</li>
         <li>2</li>
         <li>3</li>
         <li>4</li>
         <li>5</li>
     </ul>
+    
 </body>
 </html>
