--- a/Week2/CSS101.html
+++ b/Week2/CSS101.html
@@ -7,18 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <center><h1>This is CSS101.html</h1></center>
-    <center><div class="box">This is a box</div></center>
-    <a href="test">
-        Google
-    </a>
+    <center><h1><b><font style="color: white">This is CSS101.html</font></b></h1></center>
+    <center><h2><div class="box" style="border: solid 5px coral; ">This is a box</div></h2></center>
    
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-    </ul>
-    
 </body>
 </html>
