--- a/Week2/CSS101.html
+++ b/Week2/CSS101.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>SE_CAMP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mystyle.Css">
     <title>Document</title>
@@ -9,6 +10,34 @@
 <body>
     <center><h1><b><font style="color: white">This is CSS101.html</font></b></h1></center>
     <center><h2><div class="box" style="border: solid 5px coral; ">This is a box</div></h2></center>
-   
+   <!-- <p class="italic">
+    font italic
+   </p>
+   <p class="">
+    font normal
+   </p>
+   <p class="normal">
+    font normal
+   </p>
+   <div>
+    <div>
+        <p>div div and p</p>
+    </div>
+    <p>div and p</p>
+   </div>
+   <ul>
+    <a href="https://www.youtube.com/">Youtube</a><br><br>
+    <a href="https://www.youtube.com/">ig</a><br><br>
+    <a href="https://www.youtube.com/">Game</a><br><br>
+    <a href="https://www.youtube.com/">Gmail</a><br><br>
+    <a href="https://www.youtube.com/">Buu</a><br><br>
+   </ul>
+   <p>dadwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
+    awwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
+    <center><span><img src="gcat.gif" >Test</span></center>
+    asssssssssssssssssssssssssssssssssssss
+    ssssssssssssssssssssssssssssssssssssss
+   </p>
+   <div class="box2">This position</div> -->
 </body>
 </html>
